cpdp-925 cpdp-927: fixed overlapping focus styles in zoomed error summary

--- a/public/stylesheets/cgtpd.css
+++ b/public/stylesheets/cgtpd.css
@@ -41,6 +41,10 @@ fieldset .form-hint {
     border-width: 4px;
 }
 
+.govuk-list>li, .error-summary-list>li {
+    margin-bottom: 5px;
+}
+
 /*
     Assets Frontend does not render focus styles accessibly
  */
